--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-fileupload": "^1.4.0",
     "fs-extra": "^10.1.0",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.2"
   }
